gitops/base/infra/ostree/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ostree
  name: ostree
  namespace: infra
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/instance: ostree
    app.kubernetes.io/name: ostree
